# houdini

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/houdini-client/: Cargo.toml
crates/houdini-client/src/: config.rs  forward.rs  main.rs  transport.rs  tunnel.rs
crates/houdini-protocol/: Cargo.toml
crates/houdini-protocol/src/: frame.rs  handshake.rs  lib.rs  mux.rs
crates/houdini-server/: Cargo.toml
crates/houdini-server/src/: config.rs  control.rs  error.rs  main.rs  proxy.rs  state.rs  transport.rs
examples/: client.toml  server.toml
