[workspace]
resolver = "3"
members = [
    "crates/houdini-protocol",
    "crates/houdini-server",
    "crates/houdini-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/utterstep/houdini"
authors = ["Vlad Stepanov"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
houdini-protocol = { path = "crates/houdini-protocol", version = "0.1.0" }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# HTTP
axum = { version = "0.8", features = ["ws", "http1", "http2", "macros"] }
hyper = { version = "1", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "server"] }
http = "1"
http-body = "1"
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
serde_json = "1"
toml = "0.8"
bytes = { version = "1", features = ["serde"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }
url = { version = "2", features = ["serde"] }

# Errors / logging
eyre = "0.6"
color-eyre = "0.6"
thiserror = "2"
displaydoc = "0.2"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tree = "0.4"

# Secrets / crypto
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2"

# Helpers
derive-getters = "0.5"
ctrlc = { version = "3", features = ["termination"] }

# Profile tweaks
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
