[package]
name = "houdini-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Public-facing Houdini server: accepts public HTTPS traffic and reverse-proxies it to the connected client over a multiplexed WebSocket"

[lints]
workspace = true

[[bin]]
name = "houdini-server"
path = "src/main.rs"

[dependencies]
houdini-protocol = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
